--- a/Converter/scraped_html/check-table.html
+++ b/Converter/scraped_html/check-table.html
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-04-21 00:42">2 hours, 15 minutes ago</span></dd>
+<span class="datetime" title="2022-04-23 22:53">26 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -430,7 +430,7 @@ storage engines:</p>
 good enough.</p>
 <p>The <a href="/kb/en/aria/">Aria</a> storage engine supports <a href="/kb/en/progress-reporting/">progress reporting</a> for this statement.</p>
 <p>If you want to know if two tables are identical, take a look
-at <code class="highlight fixed" style="white-space:pre-wrap"><a href="/kb/en/checksum-table/">CHECKSUM TABLE</a></code>.</p>
+at <a href="/kb/en/checksum-table/">CHECKSUM TABLE</a>.</p>
 <h2 class="anchored_heading" id="innodb">InnoDB</h2>
 <p>If <code>CHECK TABLE</code> finds an error in an InnoDB table, MariaDB might shutdown to prevent the error propagation. In this case, the problem will be reported in the error log. Otherwise the table or an index might be marked as corrupted, to prevent use. This does not happen with some minor problems, like a wrong number of entries in a secondary index. Those problems are reported in the output of <code>CHECK TABLE</code>.</p>
 <p>Each tablespace contains a header with metadata. This header is not checked by this statement.</p>
