--- a/Converter/scraped_html/create-role.html
+++ b/Converter/scraped_html/create-role.html
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-04-24 23:24">11 months, 3 weeks ago</span></dd>
+<span class="datetime" title="2022-04-20 08:03">3 days, 15 hours ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -461,7 +461,6 @@ one error is produced for all roles which have not been created:</p>
 </pre><p>Failed <code>CREATE</code> or <code>DROP</code> operations, for both users and roles, produce the
 same error code.</p>
 <p><code>PUBLIC</code> and <code>NONE</code> are reserved, and cannot be used as role names. <code>NONE</code> is used to <a href="/kb/en/set-role/">unset a role</a> and <code>PUBLIC</code> has a special use in other systems, such as Oracle, so is reserved for compatibility purposes.</p>
-<p>Before <a href="/kb/en/mariadb-10113-release-notes/">MariaDB 10.1.13</a>, the <code>CREATE ROLE</code> statement was not permitted in <a href="/kb/en/prepared-statements/">prepared statements</a>.</p>
 <p>For valid identifiers to use as role names, see <a href="/kb/en/identifier-names/">Identifier Names</a>.</p>
 <h4 class="anchored_heading" id="with-admin">WITH ADMIN</h4>
 <p>The optional <code>WITH ADMIN</code> clause determines whether the current user, the
