--- a/Converter/scraped_html/rename-user.html
+++ b/Converter/scraped_html/rename-user.html
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2019-05-16 14:13">2 years, 11 months ago</span></dd>
+<span class="datetime" title="2022-04-20 06:48">3 days, 16 hours ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -409,9 +409,9 @@
     [, old_user TO new_user] ...
 </pre><h2 class="anchored_heading" id="description">Description</h2>
 <p>The RENAME USER statement renames existing MariaDB accounts. To use it,
-you must have the global <code><a href="/kb/en/grant/#global-privileges">CREATE USER</a></code> privilege
+you must have the global <a href="/kb/en/grant/#global-privileges">CREATE USER</a> privilege
 or the <code><a href="/kb/en/grant/#table-privileges">UPDATE</a></code> privilege for the <code>mysql</code> database.
-Each account is named using the same format as for the <code><a href="/kb/en/create-user/">CREATE USER</a></code>
+Each account is named using the same format as for the <a href="/kb/en/create-user/">CREATE USER</a>
 statement; for example, <code>'jeffrey'@'localhost'</code>.
 If you specify only the user name part of the account name, a host
 name part of <code>'%'</code> is used.</p>
