--- a/Converter/scraped_html/alter-table.html
+++ b/Converter/scraped_html/alter-table.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-04-20 10:02">7 hours, 27 minutes ago</span></dd>
+<span class="datetime" title="2022-04-20 10:02">3 days, 13 hours ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
