--- a/Converter/scraped_html/alter-user.html
+++ b/Converter/scraped_html/alter-user.html
@@ -251,12 +251,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2016-03-21 13:59">6 years ago</span></dd>
+<span class="datetime" title="2016-03-21 13:59">6 years, 1 month ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-03-04 21:59">1 month, 1 week ago</span></dd>
+<span class="datetime" title="2022-04-23 21:14">2 hours, 4 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -627,9 +627,9 @@ password is set.</p>
 </div><p>The <code>REQUIRE</code> keyword must be used only once for all specified options, and the <code>AND</code> keyword can be used to separate individual options, but it is not required.</p>
 <p>For example, you can alter a user account to require these TLS options with the following:</p>
 <pre class="fixed"><span class="k">ALTER</span> <span class="k">USER</span> <span class="s1">&#39;alice&#39;</span><span class="o">@</span><span class="s1">&#39;%&#39;</span>
-    <span class="n">REQUIRE</span> <span class="n">SUBJECT</span> <span class="s1">&#39;/CN=alice/O=My Dom, Inc./C=US/ST=Oregon/L=Portland&#39;</span>
-    <span class="k">AND</span> <span class="n">ISSUER</span> <span class="s1">&#39;/C=FI/ST=Somewhere/L=City/ O=Some Company/CN=Peter Parker/emailAddress=p.parker@marvel.com&#39;</span>
-    <span class="k">AND</span> <span class="n">CIPHER</span> <span class="s1">&#39;SHA-DES-CBC3-EDH-RSA&#39;</span><span class="p">;</span>
+ <span class="n">REQUIRE</span> <span class="n">SUBJECT</span> <span class="s1">&#39;/CN=alice/O=My Dom, Inc./C=US/ST=Oregon/L=Portland&#39;</span> <span class="k">AND</span>
+ <span class="n">ISSUER</span> <span class="s1">&#39;/C=FI/ST=Somewhere/L=City/ O=Some Company/CN=Peter Parker/emailAddress=p.parker@marvel.com&#39;</span>
+ <span class="k">AND</span> <span class="n">CIPHER</span> <span class="s1">&#39;SHA-DES-CBC3-EDH-RSA&#39;</span><span class="p">;</span>
 </pre><p>If any of these options are set for a specific user account, then any client who tries to connect with that user account will have to be configured to connect with TLS.</p>
 <p>See <a href="/kb/en/securing-connections-for-client-and-server/">Securing Connections for Client and Server</a> for information on how to enable TLS on the client and server.</p>
 <h2 class="anchored_heading" id="resource-limit-options">Resource Limit Options</h2>
