--- a/Converter/scraped_html/drop-role.html
+++ b/Converter/scraped_html/drop-role.html
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-04-24 23:22">11 months, 3 weeks ago</span></dd>
+<span class="datetime" title="2022-04-20 14:24">3 days, 8 hours ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -448,7 +448,6 @@ results. If an error occurs, <code>DROP ROLE</code> will still drop the roles th
 do not result in an error. Only one error is produced for all roles which have not been dropped:</p>
 <pre class="fixed">ERROR 1396 (HY000): Operation DROP ROLE failed for 'a','b','c'
 </pre><p>Failed <code>CREATE</code> or <code>DROP</code> operations, for both users and roles, produce the same error code.</p>
-<p>Before <a href="/kb/en/mariadb-10113-release-notes/">MariaDB 10.1.13</a>, the <code>DROP ROLE</code> statement was not permitted in <a href="/kb/en/prepared-statements/">prepared statements</a>.</p>
 <h4 class="anchored_heading" id="if-exists">IF EXISTS</h4>
 <p>If the <code>IF EXISTS</code> clause is used, MariaDB will return a warning instead of an error if the role does not exist.</p>
 <h2 class="anchored_heading" id="examples">Examples</h2>
