--- a/Converter/scraped_html/show-create-user.html
+++ b/Converter/scraped_html/show-create-user.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2019-03-10 10:00">3 years, 1 month ago</span></dd>
+<span class="datetime" title="2022-04-17 22:41">6 days ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -434,24 +434,24 @@
 <p>Shows the <a href="/kb/en/create-user/">CREATE USER</a> statement that created the given
 user. The statement requires the <a href="/kb/en/grant/#table-privileges">SELECT</a> privilege for the <a href="/kb/en/the-mysql-database-tables/">mysql</a> database, except for the current user.</p>
 <h2 class="anchored_heading" id="examples">Examples</h2>
-<pre class="fixed"><span class="k">CREATE</span> <span class="k">USER</span> <span class="n">foo4</span><span class="o">@</span><span class="n">test</span> <span class="n">require</span> <span class="n">cipher</span> <span class="s1">&#39;text&#39;</span> 
-  <span class="n">issuer</span> <span class="s1">&#39;foo_issuer&#39;</span> <span class="n">subject</span> <span class="s1">&#39;foo_subject&#39;</span><span class="p">;</span>
+<pre class="fixed">CREATE USER foo4@test require cipher 'text' 
+  issuer 'foo_issuer' subject 'foo_subject';
 
-<span class="k">SHOW</span> <span class="k">CREATE</span> <span class="k">USER</span> <span class="n">foo4</span><span class="o">@</span><span class="n">test</span><span class="err">\</span><span class="k">G</span>
-<span class="o">***************************</span> <span class="mi">1</span><span class="p">.</span> <span class="k">row</span> <span class="o">***************************</span>
-<span class="k">CREATE</span> <span class="k">USER</span> <span class="s1">&#39;foo4&#39;</span><span class="o">@</span><span class="s1">&#39;test&#39;</span> 
-  <span class="n">REQUIRE</span> <span class="n">ISSUER</span> <span class="s1">&#39;foo_issuer&#39;</span> 
-  <span class="n">SUBJECT</span> <span class="s1">&#39;foo_subject&#39;</span> 
-  <span class="n">CIPHER</span> <span class="s1">&#39;text&#39;</span>
+SHOW CREATE USER foo4@test\G
+*************************** 1. row ***************************
+CREATE USER 'foo4'@'test' 
+  REQUIRE ISSUER 'foo_issuer' 
+  SUBJECT 'foo_subject' 
+  CIPHER 'text'
 </pre><p><a href="/kb/en/user-password-expiry/">User Password Expiry</a>:</p>
-<pre class="fixed"><span class="k">CREATE</span> <span class="k">USER</span> <span class="s1">&#39;monty&#39;</span><span class="o">@</span><span class="s1">&#39;localhost&#39;</span> <span class="n">PASSWORD</span> <span class="n">EXPIRE</span> <span class="nb">INTERVAL</span> <span class="mi">120</span> <span class="k">DAY</span><span class="p">;</span>
+<pre class="fixed">CREATE USER 'monty'@'localhost' PASSWORD EXPIRE INTERVAL 120 DAY;
 
-<span class="k">SHOW</span> <span class="k">CREATE</span> <span class="k">USER</span> <span class="s1">&#39;monty&#39;</span><span class="o">@</span><span class="s1">&#39;localhost&#39;</span><span class="p">;</span>
-<span class="o">+</span><span class="c1">------------------------------------------------------------------+</span>
-<span class="o">|</span> <span class="k">CREATE</span> <span class="k">USER</span> <span class="k">for</span> <span class="n">monty</span><span class="o">@</span><span class="n">localhost</span>                                  <span class="o">|</span>
-<span class="o">+</span><span class="c1">------------------------------------------------------------------+</span>
-<span class="o">|</span> <span class="k">CREATE</span> <span class="k">USER</span> <span class="s1">&#39;monty&#39;</span><span class="o">@</span><span class="s1">&#39;localhost&#39;</span> <span class="n">PASSWORD</span> <span class="n">EXPIRE</span> <span class="nb">INTERVAL</span> <span class="mi">120</span> <span class="k">DAY</span> <span class="o">|</span>
-<span class="o">+</span><span class="c1">------------------------------------------------------------------+</span>
+SHOW CREATE USER 'monty'@'localhost';
++------------------------------------------------------------------+
+| CREATE USER for monty@localhost                                  |
++------------------------------------------------------------------+
+| CREATE USER 'monty'@'localhost' PASSWORD EXPIRE INTERVAL 120 DAY |
++------------------------------------------------------------------+
 </pre><h2 class="anchored_heading" id="see-also">See Also</h2>
 <ul start="1"><li><a href="/kb/en/create-user/">CREATE USER</a>
 </li><li><a href="/kb/en/alter-user/">ALTER USER</a>
